--- a/VidCoder/Resources/Translations/EncodeDetailsRes.nl.resx
+++ b/VidCoder/Resources/Translations/EncodeDetailsRes.nl.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="EncodeDetailsWindowTitle" xml:space="preserve">
-    <value>Codeergegevens</value>
+    <value>Coderingsdetails</value>
   </data>
   <data name="QueueSectionHeader" xml:space="preserve">
     <value>Wachtrij</value>
@@ -134,7 +134,7 @@
     <value>Tweede fase:</value>
   </data>
   <data name="EncodePassLabel" xml:space="preserve">
-    <value>Coderen:</value>
+    <value>Coderingsfase:</value>
   </data>
   <data name="JobLabel" xml:space="preserve">
     <value>Taak:</value>
