--- a/VidCoder/Resources/Translations/MiscRes.nl.resx
+++ b/VidCoder/Resources/Translations/MiscRes.nl.resx
@@ -151,7 +151,7 @@
     <value>Auto-hernoemen</value>
   </data>
   <data name="FileConflictWarning" xml:space="preserve">
-    <value>Er bestaat al een bestand op pad {0}. Wilt u het overschrijven, automatisch een nieuw pad bepalen voor de coderingstaak of de bewerking annuleren?</value>
+    <value>Er bestaat al een bestand in {0}. Wilt u het overschrijven, automatisch een nieuw pad bepalen voor de coderingstaak of de bewerking annuleren?</value>
   </data>
   <data name="QueueFileConflictWarning" xml:space="preserve">
     <value>Een wachtrijtaak heeft al een uitvoerpad op {0}. Wil je de taak in de wachtrij vervangen, automatisch een nieuw uitvoerpad vinden voor de coderingsopdracht of de bewerking annuleren?</value>
@@ -228,7 +228,7 @@
     <value>Het systeem gaat over {0} seconden in slaapstand.</value>
   </data>
   <data name="EncodeCompleteWarning_LogOffMessage" xml:space="preserve">
-    <value>Je wordt uitgelogd in {0} seconden.</value>
+    <value>Je wordt uitgelogd over {0} seconden.</value>
   </data>
   <data name="EncodeCompleteWarning_ShutdownMessage" xml:space="preserve">
     <value>Het systeem schakelt uit over {0} seconden.</value>
